feat: Bump certificate hashing algo SHA1 -> SHA256 except for globalconf V2's authCertHash
Refs: XRDDEV-445